*** Translation Generator WP ***

xxx - version 1.3
* New: Add project tagline
* New: Add GPT model select field
* Tweak: Move excluded terms to settings pages
* Fix: Tokens used calculations
* Fix: Tokens cost calculations

2024-06-01 - version 1.2
* New - Add 20 most widely used WordPress languages to translate files to
* New - Add tabbed navigation
* New - Add OpenAI API field linked to .env file
* New - Add languages select field linked to .env file
* New - Add save notifications
* Tweak - Update translate button colors

2024-05-29 - version 1.1
* New: Add changelog
* Tweak: Show version number to front end
* Tweak: Switch to JS module imports
* Fix: Broken .po files when plural strings are found in .pot file
* Fix: Missing progress bar on subsequent file uploads

2024-05-26 - version 1.0
* Initial release