@@ -26,7 +26,7 @@
                     <h1 class="text-3xl font-bold text-gray-800 flex items-center space-x-2">
                         <i class="fa-solid fa-globe"></i>
                         <span>Translation Generator WP</span>
-                        <span class="text-right text-gray-300 text-xs font-normal">v1.2</span>
+                        <span class="text-right text-gray-300 text-xs font-normal">v1.3</span>
                     </h1>
                     <p class="text-gray-600">Effortlessly translate your WordPress plugin language files with precision and ease.</p>
                     <div class="flex items-center space-x-4">
@@ -96,13 +96,13 @@
                                     </select>
                                 </dd>
                             </div>
-                            <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0 apiModels">
+                            <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0 apiModel">
                                 <dt class="text-sm font-medium leading-6 text-gray-900">GPT Model</dt>
                                 <dd class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">
                                     <select id="modelSelect" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:text-sm sm:leading-6">
-                                        <option value="gpt-4o">gpt-4o</option>
-                                        <option value="gpt-4">gpt-4</option>
-                                        <option value="gpt-3.5">gpt-3.5</option>
+                                        <option value="gpt-4o">GPT-4o (Default)</option>
+                                        <option value="gpt-4">GPT-4</option>
+                                        <option value="gpt-3.5">GPT-3.5</option>
                                     </select>
                                 </dd>
                             </div>
