@@ -3,6 +3,7 @@
 xxx - version 1.3
 * New: Add project tagline
 * New: Add GPT model select field
+* New: Add different GPT model translations and update .po file header with selected model
 * Tweak: Move excluded terms to settings pages
 * Fix: Tokens used calculations
 * Fix: Tokens cost calculations
